Added screenshots of working app to the readme with discription of what they are showing, added and images folde, and did some changes to the rooting paths to connect my pages.

--- a/index.html
+++ b/index.html
@@ -32,3 +32,11 @@
     <script src="./assets/Javascript/script.js"></script>
   </body>
 </html>
+<img src="./assets/imgRm/length.png" alt="" />
+<img src="./assets/imgRm/warningL.png" alt="" />
+<img src="./assets/imgRm/Numbers.png" alt="" />
+<img src="./assets/imgRm/special.png" alt="" />
+<img src="./assets/imgRm/upperC.png" alt="" />
+<img src="./assets/imgRm/lowerC.png" alt="" />
+<img src="./assets/imgRm/nochar.png" alt="" />
+<img src="./assets/imgRm/Generated.png" alt="" />
